--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
-:root{
-	/* variables */
+/* :root{
+	
 }
 
 *,
@@ -30,4 +30,4 @@ body {
 	margin-right: auto;
 	padding-left: 1rem;
 	padding-right: 1rem;
-}
+} */
